--- a/templates/profile.html
+++ b/templates/profile.html
@@ -47,7 +47,7 @@
         <img src="{{ user.profile.profile_picture.url }}" alt="Profile Picture" class="profile-img">
         <p><strong>Username:</strong> {{ user.username }}</p>
         <p><strong>Bio:</strong> {{ user.profile.bio }}</p>
-        <a href="{% url 'profile-edit' %}" class="btn">Edit Profile</a>
+        <a href="{% url 'profile_edit' %}" class="btn">Edit Profile</a>
     </div>
 </div>
 {% endblock %}
