--- a/templates/base.html
+++ b/templates/base.html
@@ -77,6 +77,16 @@
             margin: 0;
             color: #10439F;
         }
+        .tag {
+            display: inline-block;
+            background: #f27bbd;
+            color: white;
+            padding: 3px 8px;
+            border-radius: 5px;
+            margin-right: 5px;
+            font-size: 12px;
+        }
+        
     </style>
 </head>
 <body>
