--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,16 @@
                     <h3>{{ post.title }}</h3>
                     <p>{{ post.content }}</p>
                     <p><strong>By:</strong> {{ post.author.username }} | <strong>On:</strong> {{ post.created_at }}</p>
+                    {% if post.category %}
+                        <p><strong>Category:</strong> {{ post.category.name }}</p>
+                    {% endif %}
+                    {% if post.tags.all %}
+                        <p><strong>Tags:</strong>
+                            {% for tag in post.tags.all %}
+                                <span class="tag">{{ tag.name }}</span>
+                            {% endfor %}
+                        </p>
+                    {% endif %}
                 </div>
             {% endfor %}
         </div>
