--- a/templates/my_blogs.html
+++ b/templates/my_blogs.html
@@ -8,6 +8,16 @@
             <h3>{{ post.title }}</h3>
             <p>{{ post.content }}</p>
             <p><strong>On:</strong> {{ post.created_at }}</p>
+            {% if post.category %}
+                <p><strong>Category:</strong> {{ post.category.name }}</p>
+            {% endif %}
+            {% if post.tags.all %}
+                <p><strong>Tags:</strong>
+                    {% for tag in post.tags.all %}
+                        <span class="tag">{{ tag.name }}</span>
+                    {% endfor %}
+                </p>
+            {% endif %}            
             <a href="{% url 'edit_post' post.id %}" class="btn">Edit</a>
             <form action="{% url 'delete_post' post.id %}" method="POST">
                 {% csrf_token %}
